--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>MbR2XgD github - Home</title>
 
 		<!-- meta params =================================================================== -->
-		<meta charset=utf-8">
+		<meta charset="utf-8">
 		<!--meta http-equiv="content-type" content="text/html/charset=iso-utf-8" -->
 		<meta name="robots" content="noindex,nofollow">
 		<meta name="author" content="Milton Bucheb Junior">
@@ -25,6 +25,8 @@
 		<!-- home::desc===============================-->
 		<div id="home_desc"></div>
 		<!-- home::desc===============================-->
+
+		<h3>testing word:atenção and aten&ccedil;&atilde;o</h3>
 
 	</body>
 	<!-- body text===================================-->
