--- a/media.html
+++ b/media.html
@@ -1,11 +1,11 @@
 <!DocType html>
 <html>
 	<head>
-		<title>MbR2XgD github - Home</title>
+		<title>MbR2XgD my video - github </title>
 
 		<!-- meta params =================================================================== -->
-		<meta charset="UTF-8">
-		<!-- meta http-equiv="content-type" content="text/html/charsets-iso=utf-8"-->
+		<!--meta charset="UTF-8"--><!--NAO FUNCIONA ESSA MERD... -->
+		<meta http-equiv="content-type" content="text/html/charsets-iso=utf-8">
 		<meta name="robots" content="noindex,nofollow">
 		<meta name="author" content="Milton Bucheb Junior">
 		<!-- meta params =================================================================== -->
@@ -19,22 +19,14 @@
 	<!-- body text===================================-->
 	<body >
 		<!--home:head===========================-->
-		<h2>MbR2XgD - Seja Bem-vindo</h2>
+		<div id="media_video"></div>
 		<!--home:head===========================-->
-
-		<!-- home::desc===============================-->
-		<div id="home_desc"></div>
-		<!-- home::desc===============================-->
-		<!-- home::charset============================-->
-		<div id="home_text"></div>
-		<!-- home::charset============================-->
 	</body>
 	<!-- body text===================================-->
 	<!-- script===================================-->
 	<script>
 		let wpage = new WebPage();
-		wpage.home_desc();
-		wpage.home_charset();
+		wpage.media_desc();
 	</script>
 	<!-- script===================================-->
 </html>
