--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>MbR2XgD github - Home</title>
 
 		<!-- meta params =================================================================== -->
-		<meta charset="UTF-8">
+		<meta charset="UTF-8"><!--NAO FUNCIONA ESSA MERD@#$@$!... -->
 		<!-- meta http-equiv="content-type" content="text/html/charsets-iso=utf-8"-->
 		<meta name="robots" content="noindex,nofollow">
 		<meta name="author" content="Milton Bucheb Junior">
