utf8 modo antigo

--- a/media.html
+++ b/media.html
@@ -4,8 +4,8 @@
 		<title>MbR2XgD my video - github </title>
 
 		<!-- meta params =================================================================== -->
-		<meta charset="UTF-8"><!--NAO FUNCIONA ESSA MERD@#$@$!... -->
-		<!--meta http-equiv="content-type" content="text/html/charsets-iso=utf-8"-->
+		<!--meta charset="UTF-8"--><!--NAO FUNCIONA ESSA MERD@#$@$!... -->
+		<meta http-equiv="content-type" content="text/html/charset=utf-8">
 		<meta name="robots" content="noindex,nofollow">
 		<meta name="author" content="Milton Bucheb Junior">
 		<!-- meta params =================================================================== -->
