charset iso-8895-1 no modo antigo

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<title>MbR2XgD github - Home</title>
 
 		<!-- meta params =================================================================== -->
-		<meta charset="iso-8895-1">
+		<!--meta charset="iso-8895-1"--><!--TAMBEM NAO FUNCIONA ESSA MERD@%@%!... -->
 		<!--meta charset="UTF-8"--><!--NAO FUNCIONA ESSA MERD@#$@$!... -->
 		<!--meta http-equiv="content-type" content="text/html/charset=utf-8"--><!--ERROR-->
-		<!--meta http-equiv="content-type" content="text/html/charset="iso-8895-1"--><!--Done -->
+		<meta http-equiv="content-type" content="text/html/charset="iso-8895-1"><!--Done -->
 		<meta name="robots" content="noindex,nofollow">
 		<meta name="author" content="Milton Bucheb Junior">
 		<!-- meta params =================================================================== -->
