--- a/media.html
+++ b/media.html
@@ -10,6 +10,8 @@
 		<meta http-equiv="content-type" content="text/html;charset=iso-8895-1"><!--Done -->
 		<meta name="robots" content="noindex,nofollow">
 		<meta name="author" content="Milton Bucheb Junior">
+		<meta name="description" content="MbR2XgD github">
+		<meta name="keywords" content="mbr2xgd, milton, bucheb, junior, github">
 		<!-- meta params =================================================================== -->
 
 		<!-- default scripts... =======================-->
