mediafile.html new links

--- a/media.html
+++ b/media.html
@@ -22,15 +22,17 @@
 	</head>
 	<!-- body text===================================-->
 	<body >
-		<!--home:head===========================-->
+		<!--media:body===========================-->
 		<div id="media_video"></div>
-		<!--home:head===========================-->
+		<div id="media_links"></div>
+		<!--media:body===========================-->
 	</body>
 	<!-- body text===================================-->
 	<!-- script===================================-->
 	<script>
 		let wpage = new WebPage();
 		wpage.media_desc();
+		wpage.media_games();
 	</script>
 	<!-- script===================================-->
 </html>
