--- a/media.html
+++ b/media.html
@@ -4,10 +4,7 @@
 		<title>MbR2XgD my video - github </title>
 
 		<!-- meta params =================================================================== -->
-		<!--meta charset="iso-8895-1"--><!--TAMBEM NAO FUNCIONA ESSA MERD@%@%!... -->
-		<meta charset="UTF-8"><!--NAO FUNCIONA ESSA MERD@#$@$!... -->
-		<!--meta http-equiv="content-type" content="text/html/charset=utf-8"--><!--ERROR-->
-		<!-- meta http-equiv="content-type" content="text/html;charset=iso-8895-1" --><!--Done -->
+		<meta charset="UTF-8">
 		<meta name="robots" content="noindex,nofollow">
 		<meta name="author" content="Milton Bucheb Junior">
 		<meta name="description" content="MbR2XgD github">
@@ -23,8 +20,8 @@
 	<!-- body text===================================-->
 	<body >
 		<!--media:body===========================-->
-		<div id="media_video"></div>
 		<div id="media_links"></div>
+		<div id="media_video"></div>
 		<!--media:body===========================-->
 	</body>
 	<!-- body text===================================-->
