--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
 		<title>MbR2XgD github - Home</title>
 
 		<!-- meta params =================================================================== -->
-		<!--meta charset="iso-8895-1"--><!--TAMBEM NAO FUNCIONA ESSA MERD@%@%!... -->
-		<meta charset="UTF-8"><!--NAO FUNCIONA ESSA MERD@#$@$!... -->
-		<!--meta http-equiv="content-type" content="text/html/charset=utf-8"--><!--ERROR-->
-		<!-- meta http-equiv="content-type" content="text/html;charset=iso-8895-1" --><!--Done -->
+		<meta charset="UTF-8">
 		<meta name="robots" content="noindex,nofollow">
 		<meta name="author" content="Milton Bucheb Junior">
 		<meta name="description" content="MbR2XgD github">
@@ -38,7 +35,7 @@
 	<script>
 		let wpage = new WebPage();
 		wpage.home_desc();
-		wpage.home_charset();
+		//wpage.home_charset();
 	</script>
 	<!-- script===================================-->
 </html>
