--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 		<meta name="robots" content="noindex,nofollow">
 		<meta name="author" content="Milton Bucheb Junior">
 		<meta name="description" content="MbR2XgD github">
-		<meta name="keywords" content="mbr2xgd, milton, bucheb, junior, github">
+		<meta name="keywords" content="mbr2xgd, milton, bucheb, junior, github, mobjr">
 		<!-- meta params =================================================================== -->
 
 		<!-- default scripts... =======================-->
 		<link rel="stylesheet" href="src/mbr2xgd.css">
 		<link rel="shortcut icon" href="mbr2xgd.ico">
+		<link rel="stylesheet" href="src/superlibs/w3.css">
 		<script src="src/mbr2xgd.js"><!--nojs--></script>
+		<script src="src/superlibs.js"><!--nojs--></script>
 		<!-- default scripts... =======================-->
 	</head>
 	<!-- body text===================================-->
